VAPO/Traefik/old-practice/traefik-dash-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-dashboard-rewrite@kubernetescrd, traefik-dashboard-auth@kubernetescrd
spec:
  rules:
  - host: dashboard.traefik.dev.vovina-tisa.net
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
        path: /
        pathType: Prefix
